--- a/connection/src/main/resources/application.properties
+++ b/connection/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=3196
+spring.datasource.url=jdbc:postgres://localhost:5432/learning
+spring.datasource.username=postgres
+spring.datasource.password=Niit@123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
